Estilizando elemento separador no formulário

--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,26 @@ body {
   padding: 0;
   font-weight: bold;
 }
+
+/* Elemento Separador */
+
+.separator {
+  position: relative;
+}
+
+.line {
+  border-top: 1px solid #dbdbdb;
+  width: 268px;
+  margin: 25px auto 35px;
+}
+
+.separator span {
+  position: absolute;
+  text-transform: uppercase;
+  color: #bbb;
+  background-color: #fff;
+  top: -6px;
+  width: 50%;
+  margin-left: -25px;
+  font-size: 14px;
+}
