--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,24 @@ body {
   text-decoration: none;
   color: #373799;
 }
+
+/* Cadastre-se */
+
+#register-container {
+  background-color: #fff;
+  border: 1px solid #dbdbdb;
+  width: 350px;
+  margin-top: 10px;
+  padding: 25px;
+}
+
+#register-container p {
+  font-size: 14px;
+  color: #262626;
+}
+
+#register-container a {
+  color: #4a95f6;
+  font-weight: bold;
+  text-decoration: none;
+}
