--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,24 @@ body {
   font-weight: bold;
   text-decoration: none;
 }
+
+/* Baixe o APP */
+
+#get-app-container {
+  text-align: center;
+  width: 350px;
+}
+
+#get-app-container p {
+  margin: 20px 0;
+  font-size: 13px;
+}
+
+#get-app-container a {
+  text-decoration: none;
+}
+
+#get-app-container img {
+  width: 136px;
+  height: 40px;
+}
