--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   color: #bbb;
   background-color: #fff;
   top: -6px;
-  width: 50%;
+  width: 50px;
   margin-left: -25px;
   font-size: 14px;
 }
